--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
 						<li><a href="#" class="tran3s round-border"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="tran3s round-border"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
 					</ul>
-					<p>Copyright @2018 All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+					<p>Copyright @2019 All rights reserved |  MORE THAN MARKETING Design.</p>
 				</div>
 			</footer>
 
