--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			-->
 			<header class="theme-main-header">
 				<div class="container">
-					<a href="index.html" class="logo float-left tran4s"><img src="images/logo/logo.png" alt="Logo"></a>
+					<a href="index.html" class="logo float-left tran4s"><img src="images/logo/ComplyLogoMini.png" alt="Logo"></a>
 
 					<!-- ========================= Theme Feature Page Menu ======================= -->
 					<nav class="navbar float-right theme-main-menu one-page-menu">
@@ -112,7 +112,7 @@
 										data-splitout="none"
 										data-responsive_offset="on"
 										style="z-index: 6; white-space: nowrap;">
-										<h1>COMPLIANCE</h1>
+										<h1>Develop Compliance</h1>
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -133,7 +133,7 @@
 										data-splitout="none"
 										data-responsive_offset="on"
 										style="z-index: 6; white-space: nowrap;">
-										<h6>Sub Head, Motto or Mission subtitle</h6>
+										<h6>Todo impulso es ciego, excepto si hay saber.</h6>
 									</div>
 
 
@@ -183,7 +183,7 @@
 										data-splitout="none"
 										data-responsive_offset="on"
 										style="z-index: 6; white-space: nowrap;">
-										<h1>HELLO WE'RE BizPro</h1>
+										<h1>Develop Compliance</h1>
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -204,7 +204,7 @@
 										data-splitout="none"
 										data-responsive_offset="on"
 										style="z-index: 6; white-space: nowrap;">
-										<h6>Sub Head, Motto or Mission subtitle</h6>
+										<h6>Todo impulso es ciego, excepto si hay saber.</h6>
 									</div>
 
 
@@ -222,7 +222,6 @@
 										data-splitin="none"
 										data-splitout="none"
 										data-responsive_offset="on">
-										<a href="contact-us.html" class="project-button hvr-bounce-to-right">See Our Projects</a>
 									</div>
 								</li>
 
@@ -250,7 +249,7 @@
 										data-splitout="none"
 										data-responsive_offset="on"
 										style="z-index: 6; white-space: nowrap;">
-										<h1>HELLO WE'RE BizPro</h1>
+										<h1>Develop Compliance</h1>
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -271,7 +270,7 @@
 										data-splitout="none"
 										data-responsive_offset="on"
 										style="z-index: 6; white-space: nowrap;">
-										<h6>Sub Head, Motto or Mission subtitle</h6>
+										<h6>Todo impulso es ciego, excepto si hay saber.</h6>
 									</div>
 
 
@@ -289,7 +288,6 @@
 										data-splitin="none"
 										data-splitout="none"
 										data-responsive_offset="on">
-										<a href="contact-us.html" class="project-button hvr-bounce-to-right">See Our Projects</a>
 									</div>
 								</li>
 							</ul>
@@ -838,7 +836,7 @@
 			-->
 			<footer>
 				<div class="container">
-					<a href="index.html" class="logo"><img src="images/logo/logo.png" alt="Logo"></a>
+					<a href="index.html" class="logo"><img src="images/logo/ComplyLogoMini.png" alt="Logo"></a>
 
 					<ul>
 						<li><a href="#" class="tran3s round-border"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
