--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<li><a href="#service-section">¿QUÉ ES COMPLIANCE?</a></li>
 							<li><a href="#project-section">FUNCIÓN</a></li>
 							<li><a href="#team-section">¿PARA QUÉ SIRVE?</a></li>
-							<li><a href="#skill-section">DEFINICIÓN</a></li>
+							<li><a href="#skill-section">COMPLIANCE PENAL</a></li>
 							<li><a href="#our-client">CLIENTES</a></li>
 						<!--	<li class="dropdown-holder"><a href="#blog-section">BLOG</a>
 								<ul class="sub-menu">
@@ -91,7 +91,7 @@
 								<!-- SLIDE1  -->
 								<li data-index="rs-280" data-transition="fade" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="default"  data-title="" data-description="">
 									<!-- MAIN IMAGE -->
-									<img src="images/home/justice.jpg"  alt="image" class="rev-slidebg" data-bgparallax="3" data-bgposition="center center" data-duration="10000" data-ease="Linear.easeNone" data-kenburns="on" data-no-retina="" data-offsetend="0 0" data-offsetstart="0 0" data-rotateend="0" data-rotatestart="0" data-scaleend="100" data-scalestart="120">
+									<img src="images/home/logogrande.jpg"  alt="image" class="rev-slidebg" data-bgparallax="4" data-bgposition="center center" data-duration="10000" data-ease="Linear.easeNone" data-kenburns="on" data-no-retina="" data-offsetend="0 0" data-offsetstart="0 0" data-rotateend="0" data-rotatestart="0" data-scaleend="100" data-scalestart="120">
 									<!-- LAYERS -->
 
 									<!-- LAYER NR. 1 -->
@@ -154,13 +154,29 @@
 
 									</div>
 
+									<!-- LAYER NR. 4 -->
+									<div class="tp-caption"
+										data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+										data-y="['middle','middle','middle','middle']" data-voffset="['52','185','185','105']"
+										data-transform_idle="o:1;"
+
+										data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;"
+										data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
+										data-mask_in="x:0px;y:[100%];"
+										data-mask_out="x:inherit;y:inherit;"
+										data-start="3000"
+										data-splitin="none"
+										data-splitout="none"
+										data-responsive_offset="on">
+									</div>
+
 								</li>
 
 
 								<!-- SLIDE2  -->
-								<li data-index="rs-200" data-transition="fade" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="images/home//pericles_.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="" data-description="">
+								<li data-index="rs-200" data-transition="fade" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="images/home/justice.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="" data-description="">
 									<!-- MAIN IMAGE -->
-									<img src="images/home//pericles_.jpg"  alt="image" class="rev-slidebg" data-bgparallax="3" data-bgposition="center center" data-duration="10000" data-ease="Linear.easeNone" data-kenburns="on" data-no-retina="" data-offsetend="0 0" data-offsetstart="0 0" data-rotateend="0" data-rotatestart="0" data-scaleend="100" data-scalestart="120">
+									<img src="images/home/justice.jpg"  alt="image" class="rev-slidebg" data-bgparallax="4" data-bgposition="center center" data-duration="10000" data-ease="Linear.easeNone" data-kenburns="on" data-no-retina="" data-offsetend="0 0" data-offsetstart="0 0" data-rotateend="0" data-rotatestart="0" data-scaleend="100" data-scalestart="120">
 
 									<!-- BACKGROUND VIDEO LAYER -->
 
@@ -223,12 +239,28 @@
 										data-splitout="none"
 										data-responsive_offset="on">
 									</div>
+
+									<!-- LAYER NR. 4 -->
+									<div class="tp-caption"
+										data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+										data-y="['middle','middle','middle','middle']" data-voffset="['52','185','185','105']"
+										data-transform_idle="o:1;"
+
+										data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;"
+										data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
+										data-mask_in="x:0px;y:[100%];"
+										data-mask_out="x:inherit;y:inherit;"
+										data-start="3000"
+										data-splitin="none"
+										data-splitout="none"
+										data-responsive_offset="on">
+									</div>
 								</li>
 
 								<!-- SLIDE3  -->
-								<li data-index="rs-18" data-transition="fade" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="images/home/supreme-court.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="" data-description="">
+								<li data-index="rs-18" data-transition="fade" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="images/home/pericles_.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="" data-description="">
 									<!-- MAIN IMAGE -->
-									<img src="images/home/supreme-court.jpg"  alt="image" class="rev-slidebg" data-bgparallax="3" data-bgposition="center center" data-duration="10000" data-ease="Linear.easeNone" data-kenburns="on" data-no-retina="" data-offsetend="0 0" data-offsetstart="0 0" data-rotateend="0" data-rotatestart="0" data-scaleend="100" data-scalestart="120">
+									<img src="images/home/pericles_.jpg"  alt="image" class="rev-slidebg" data-bgparallax="4" data-bgposition="center center" data-duration="10000" data-ease="Linear.easeNone" data-kenburns="on" data-no-retina="" data-offsetend="0 0" data-offsetstart="0 0" data-rotateend="0" data-rotatestart="0" data-scaleend="100" data-scalestart="120">
 									<!-- LAYERS -->
 
 									<!-- LAYER NR. 1 -->
@@ -289,11 +321,129 @@
 										data-splitout="none"
 										data-responsive_offset="on">
 									</div>
+
+									<!-- LAYER NR. 4 -->
+									<div class="tp-caption"
+										data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+										data-y="['middle','middle','middle','middle']" data-voffset="['52','185','185','105']"
+										data-transform_idle="o:1;"
+
+										data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;"
+										data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
+										data-mask_in="x:0px;y:[100%];"
+										data-mask_out="x:inherit;y:inherit;"
+										data-start="3000"
+										data-splitin="none"
+										data-splitout="none"
+										data-responsive_offset="on">
+									</div>
+								</li>
+
+								<!-- SLIDE4  -->
+								<li data-index="rs-18" data-transition="fade" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="images/home/logogrande.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="" data-description="">
+									<!-- MAIN IMAGE -->
+									<img src="images/home/supreme-court.jpg"  alt="image" class="rev-slidebg" data-bgparallax="4" data-bgposition="center center" data-duration="10000" data-ease="Linear.easeNone" data-kenburns="on" data-no-retina="" data-offsetend="0 0" data-offsetstart="0 0" data-rotateend="0" data-rotatestart="0" data-scaleend="100" data-scalestart="120">
+									<!-- LAYERS -->
+
+									<!-- LAYER NR. 1 -->
+									<div class="tp-caption"
+										data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+										data-y="['middle','middle','middle','middle']" data-voffset="['-58','-33','-33','-100']"
+										data-width="none"
+										data-height="none"
+										data-whitespace="nowrap"
+										data-transform_idle="o:1;"
+
+										data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;"
+										data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
+										data-mask_in="x:0px;y:[100%];"
+										data-mask_out="x:inherit;y:inherit;"
+										data-start="1000"
+										data-splitin="none"
+										data-splitout="none"
+										data-responsive_offset="on"
+										style="z-index: 6; white-space: nowrap;">
+										<h1>Develop Compliance</h1>
+									</div>
+
+									<!-- LAYER NR. 2 -->
+									<div class="tp-caption"
+										data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+										data-y="['middle','middle','middle','middle']" data-voffset="['-05','93','93','20']"
+										data-width="none"
+										data-height="none"
+										data-whitespace="nowrap"
+										data-transform_idle="o:1;"
+
+										data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;"
+										data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
+										data-mask_in="x:0px;y:[100%];"
+										data-mask_out="x:inherit;y:inherit;"
+										data-start="2000"
+										data-splitin="none"
+										data-splitout="none"
+										data-responsive_offset="on"
+										style="z-index: 6; white-space: nowrap;">
+										<h6>Todo impulso es ciego, excepto si hay saber.</h6>
+									</div>
+
+
+									<!-- LAYER NR. 3 -->
+									<div class="tp-caption"
+										data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+										data-y="['middle','middle','middle','middle']" data-voffset="['52','185','185','105']"
+										data-transform_idle="o:1;"
+
+										data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;"
+										data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
+										data-mask_in="x:0px;y:[100%];"
+										data-mask_out="x:inherit;y:inherit;"
+										data-start="3000"
+										data-splitin="none"
+										data-splitout="none"
+										data-responsive_offset="on">
+									</div>
+
+									<!-- LAYER NR. 4 -->
+									<div class="tp-caption"
+										data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+										data-y="['middle','middle','middle','middle']" data-voffset="['52','185','185','105']"
+										data-transform_idle="o:1;"
+
+										data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;"
+										data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
+										data-mask_in="x:0px;y:[100%];"
+										data-mask_out="x:inherit;y:inherit;"
+										data-start="3000"
+										data-splitin="none"
+										data-splitout="none"
+										data-responsive_offset="on">
+									</div>
 								</li>
 							</ul>
 						</div>
 					</div><!-- END REVOLUTION SLIDER -->
 	        </div> <!--  /#banner -->
+
+
+
+					<div id="team-section">
+						<div class="container">
+							<div class="theme-title">
+								<h2>DEVELOP COMPLIANCE</h2>
+								<br>
+								<br>
+								<h3>Cuenta con un equipo de abogados expertos en las materias de Derecho:</h3>
+
+								<br>
+								<div class=" theme-title">
+								<h4>Contratos Mercantiles y civiles. <br><br> Gobierno Corporativo. <br><br> Créditos y Garantías. <br><br>Inmobiliario. <br><br> Societario. <br><br> Fiduciario. <br><br> Notarial.</h4>
+
+								<br><br>
+							</div>
+							</div> <!-- /.theme-title -->
+						</div> <!-- /.conatiner -->
+					</div> <!-- /#team-section -->
 
 
 
@@ -422,7 +572,7 @@
 								<div class="opacity">
 									<div class="border-shape"><div><div>
 										<ul>
-											<li>Compliance ofrece a las empresas la oportunidad de tener un liderazgo en la construcción de un sociedad más íntegra y libre de corrupción. </li>
+											<li>Develop Compliance ofrece a las empresas la oportunidad de tener un liderazgo en la construcción de un sociedad más íntegra y libre de corrupción. </li>
 
 										</ul></div></div>
 									</div> <!-- /.border-shape -->
@@ -480,7 +630,7 @@
 								<div class="opacity">
 									<div class="border-shape"><div><div>
 										<ul>
-											<li>El compliance prepara a una empresa para la visión que tendrán de ella las nuevas generaciones. </li>
+											<li>Develop Compliance prepara a una empresa para la visión que tendrán de ella las nuevas generaciones. </li>
 										</ul></div></div>
 									</div> <!-- /.border-shape -->
 								</div> <!-- /.opacity -->
@@ -513,7 +663,7 @@
 
 			<div class="page-middle-banner">
 				<div class="opacity">
-					<h3>En ... te asesoramos, realizamos un estudio profundo para crear un método preciso para el funcionamiento legal correcto de la empresa.</h3>
+					<h3>En Develop Compliance te asesoramos, realizamos un estudio profundo para crear un método preciso para el funcionamiento legal correcto de la empresa.</h3>
 					<p>Estructuramos un comportamiento laboral realmente funcional con una actitud integra.</p>
 				</div> <!-- /.opacity -->
 			</div> <!-- /.page-middle-banner -->
@@ -640,7 +790,7 @@
 								        </div>
 												<br>
 												<ul>
-												<li>Constituye el grupo de herramientas de carácter preventivo con el fin de prevenir la infracción de normas de carácter penal y prevenir eventuales sanciones que generen responsabilidad a la empresa.</li>
+												<li>Constituye el grupo de herramientas de carácter preventivo con el fin de prever la infracción de normas de carácter penal y prevenir eventuales sanciones que generen responsabilidad a la empresa.</li>
 												<br><li>Se refiere en esencia al buen cumplimiento de las normas legales.</li>
 
 										<br><li>En un medio empresarial cada vez más complejo, con exigencias en distintos ámbitos, y requisitos diversos para cada proceso legal, función y actividad.
@@ -649,7 +799,7 @@
 
 
 										El buen cumplimiento de las normas no puede darse por sentado dentro de la compañía, ya que es de gran importancia para el desarrollo y crecimiento de la empresa  se debe poner suma atención porque esté sea llevado a cabo.</ul>
-										<br><ul>El concepto de criminal compliance ha tenido un mayor uso y crecimiento E.U.A y Europa, ... asesoramos a los clientes para la presentación de un programa de cumplimiento y procedimiento empresarial de conformidad con las exigencias legales.</ul>
+										<br><ul>El concepto de criminal compliance ha tenido un mayor uso y crecimiento E.U.A y Europa, en Develop Compliance asesoramos a los clientes para la presentación de un programa de cumplimiento y procedimiento empresarial de conformidad con las exigencias legales.</ul>
 										<br>
 
 											<li>El marco organizacional de la empresa.</li>
