--- a/index.html
+++ b/index.html
@@ -427,17 +427,17 @@
 
 
 
-					<div id="team-section">
+					<div id="">
 						<div class="container">
 							<div class="theme-title">
 								<h2>DEVELOP COMPLIANCE</h2>
 								<br>
 								<br>
-								<h3>Cuenta con un equipo de abogados expertos en las materias de Derecho:</h3>
+								<h3>Cuenta con un equipo de abogados expertos en las materias de:</h3>
 
 								<br>
 								<div class=" theme-title">
-								<h4>Contratos Mercantiles y civiles. <br><br> Gobierno Corporativo. <br><br> Créditos y Garantías. <br><br>Inmobiliario. <br><br> Societario. <br><br> Fiduciario. <br><br> Notarial.</h4>
+								<h4>Contratos Mercantiles y civiles <br><br> Gobierno Corporativo <br><br> Créditos y Garantías <br><br>Inmobiliario <br><br>Ley FINITECH <br><br> Societario <br><br> Fiduciario <br><br> Notarial</h4>
 
 								<br><br>
 							</div>
