--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			-->
 			<header class="theme-main-header">
 				<div class="container">
-					<a href="index.html" class="logo float-left tran4s"><img src="images/logo/ComplyLogoMini.png" alt="Logo"></a>
+					<a href="index.html" style="width:65px; height:65px;" class="logo float-left tran4s"><img src="images/logo/ComplyLogoMini.png" alt="Logo"></a>
 
 					<!-- ========================= Theme Feature Page Menu ======================= -->
 					<nav class="navbar float-right theme-main-menu one-page-menu">
@@ -59,11 +59,11 @@
 					   <div class="collapse navbar-collapse" id="navbar-collapse-1">
 					     <ul class="nav navbar-nav">
 					       	<li class="active"><a href="#home">INICIO</a></li>
-							<li><a href="#service-section">¿QUÉ ES COMPLIANCE?</a></li>
-							<li><a href="#project-section">FUNCIÓN</a></li>
-							<li><a href="#team-section">¿PARA QUÉ SIRVE?</a></li>
-							<li><a href="#skill-section">COMPLIANCE PENAL</a></li>
-							<li><a href="#our-client">CLIENTES</a></li>
+									<li><a href="#our-client">NOSOTROS</a></li>
+									<li><a href="#service-section">¿QUÉ ES COMPLIANCE?</a></li>
+									<li><a href="#project-section">FUNCIÓN</a></li>
+									<li><a href="#team-section">¿PARA QUÉ SIRVE?</a></li>
+									<li><a href="#skill-section">COMPLIANCE PENAL</a></li>
 						<!--	<li class="dropdown-holder"><a href="#blog-section">BLOG</a>
 								<ul class="sub-menu">
 					       			<li><a href="blog-details.html" class="tran3s">Blog Details</a></li>
@@ -132,7 +132,7 @@
 										data-splitin="none"
 										data-splitout="none"
 										data-responsive_offset="on"
-										style="z-index: 6; white-space: nowrap;">
+										style="z-index: 6; white-space: nowrap;"><br><br><br>
 										<h6>Todo impulso es ciego, excepto si hay saber.</h6>
 									</div>
 
@@ -427,7 +427,7 @@
 
 
 
-					<div id="">
+					<div id="our-client">
 						<div class="container">
 							<div class="theme-title">
 								<h2>DEVELOP COMPLIANCE</h2>
@@ -437,7 +437,7 @@
 
 								<br>
 								<div class=" theme-title">
-								<h4>Contratos Mercantiles y civiles <br><br> Gobierno Corporativo <br><br> Créditos y Garantías <br><br>Inmobiliario <br><br>Ley FINITECH <br><br> Societario <br><br> Fiduciario <br><br> Notarial</h4>
+								<h4>Contratos Mercantiles y civiles <br><br> Gobierno Corporativo <br><br> Créditos y Garantías <br><br>Ley FINTECH <br><br>Inmobiliario <br><br> Societario <br><br> Fiduciario <br><br> Notarial</h4>
 
 								<br><br>
 							</div>
@@ -451,7 +451,7 @@
 				<div class="container">
 					<div class="theme-title">
 						<h2>¿QUÉ ES COMPLIANCE?</h2>
-						<p>Compliance es el equilibrio en el que participan todos los sectores que conforman a una empresa y le dan la oportunidad de prevenir posibles omisiones legales que pongan en riesgo la integridad de la empresa o causar incluso en cierre de la misma.</p>
+						<p>Compliance es el equilibrio en el que participan todos los sectores que conforman a una empresa y le dan la oportunidad de prevenir posibles omisiones legales que pongan en riesgo la integridad de la empresa o causar incluso el cierre de la misma.</p>
 					</div> <!-- /.theme-title -->
 
 					<div class="row">
@@ -686,12 +686,12 @@
 			</div> <!-- /#team-section -->
 
 
-			<div id="team-section">
+		<!--	<div id="team-section">
 				<div class="container">
 					<div class="theme-title">
 						<h2>Nuestro equipo.</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</p>
-					</div> <!-- /.theme-title -->
+					</div>  /.theme-title
 
 					<div class="clear-fix team-member-wrapper">
 						<div class="float-left">
@@ -703,7 +703,7 @@
 										<span>Web Developer</span>
 										<p>On the other hand, We denounce ut with righteo indignation and dislike men who are so beguiled and demoralized.</p>
 									</div>
-								</div> <!-- /.img -->
+								</div>
 								<div class="member-name">
 									<h6>Gonzalez Gina</h6>
 									<p>Web Developer</p>
@@ -713,9 +713,9 @@
 										<li><a href="#" class="tran3s round-border"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
 										<li><a href="#" class="tran3s round-border"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 									</ul>
-								</div> <!-- /.member-name -->
-							</div> <!-- /.single-team-member -->
-						</div> <!-- /float-left -->
+								</div>
+							</div>
+						</div>
 
 						<div class="float-left">
 							<div class="single-team-member">
@@ -726,7 +726,7 @@
 										<span>Media Partner</span>
 										<p>On the other hand, We denounce ut with righteo indignation and dislike men who are so beguiled and demoralized.</p>
 									</div>
-								</div> <!-- /.img -->
+								</div>
 								<div class="member-name">
 									<h6>Holly Vincenzini</h6>
 									<p>Media Partner</p>
@@ -736,9 +736,9 @@
 										<li><a href="#" class="tran3s round-border"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
 										<li><a href="#" class="tran3s round-border"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 									</ul>
-								</div> <!-- /.member-name -->
-							</div> <!-- /.single-team-member -->
-						</div> <!-- /float-left -->
+								</div>
+							</div>
+						</div>
 
 						<div class="float-left">
 							<div class="single-team-member">
@@ -749,7 +749,7 @@
 										<span>Graphic Design</span>
 										<p>On the other hand, We denounce ut with righteo indignation and dislike men who are so beguiled and demoralized.</p>
 									</div>
-								</div> <!-- /.img -->
+								</div>
 								<div class="member-name">
 									<h6>Ramirez Minita</h6>
 									<p>Graphic Design</p>
@@ -759,12 +759,13 @@
 										<li><a href="#" class="tran3s round-border"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
 										<li><a href="#" class="tran3s round-border"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 									</ul>
-								</div> <!-- /.member-name -->
-							</div> <!-- /.single-team-member -->
-						</div> <!-- /float-left -->
-					</div> <!-- /.team-member-wrapper -->
-				</div> <!-- /.conatiner -->
-			</div> <!-- /#team-section -->
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		-->
 
 
 
@@ -828,32 +829,33 @@
 				Our Client
 			=====================================================
 			-->
-			<div id="our-client">
+	<!--		<div id="">
 				<div class="container">
 					<div class="theme-title">
 						<h2>NUESTROS CLIENTES</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</p>
-					</div> <!-- /.theme-title -->
+					</div> <! /.theme-title --
 
 					<div class="client-slider">
 						<div class="item">
 							<img src="images/home/c1.jpg" alt="Client">
 							<p>Our successful construction approach is based on aggressive subcontractor administration, employ-ment of competent personnel, accurate schedule control, quality control and cost control. We employ only qualified subcontractors who share our goal in creating quality projects.</p>
 							<h6>- Spryte Loriano -</h6>
-						</div> <!-- /.item -->
+						</div> <-- /.item --
 						<div class="item">
 							<img src="images/home/c2.jpg" alt="Client">
 							<p>Our successful construction approach is based on aggressive subcontractor administration, employ-ment of competent personnel, accurate schedule control, quality control and cost control. We employ only qualified subcontractors who share our goal in creating quality projects.</p>
 							<h6>- Spryte Loriano -</h6>
-						</div> <!-- /.item -->
+						</div> <-- /.item --
 						<div class="item">
 							<img src="images/home/c3.jpg" alt="Client">
 							<p>Our successful construction approach is based on aggressive subcontractor administration, employ-ment of competent personnel, accurate schedule control, quality control and cost control. We employ only qualified subcontractors who share our goal in creating quality projects.</p>
 							<h6>- Spryte Loriano -</h6>
-						</div> <!-- /.item -->
-					</div> <!-- /.client-slider -->
-				</div> <!-- /.container -->
-			</div> <!-- /#our-client -->
+						</div> <-- /.item --
+					</div> <-- /.client-slider --
+				</div> <!- /.container --
+			</div> <!- /#our-client --
+		-->
 
 
 
