--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			-->
 			<header class="theme-main-header">
 				<div class="container">
-					<a href="index.html" style="width:65px; height:65px;" class="logo float-left tran4s"><img src="images/logo/ComplyLogoMini.png" alt="Logo"></a>
+					<a href="index.html" style="width:65px; height:65px;" class="logo float-left tran4s"><img src="images/logo/LogoP&C.png" alt="Logo"></a>
 
 					<!-- ========================= Theme Feature Page Menu ======================= -->
 					<nav class="navbar float-right theme-main-menu one-page-menu">
@@ -91,7 +91,7 @@
 								<!-- SLIDE1  -->
 								<li data-index="rs-280" data-transition="fade" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="default"  data-title="" data-description="">
 									<!-- MAIN IMAGE -->
-									<img src="images/home/logogrande.jpg"  alt="image" class="rev-slidebg" data-bgparallax="4" data-bgposition="center center" data-duration="10000" data-ease="Linear.easeNone" data-kenburns="on" data-no-retina="" data-offsetend="0 0" data-offsetstart="0 0" data-rotateend="0" data-rotatestart="0" data-scaleend="100" data-scalestart="120">
+									<img src="images/home/LogoP&C.png"  alt="image" class="rev-slidebg" data-bgparallax="4" data-bgposition="center center" data-duration="10000" data-ease="Linear.easeNone" data-kenburns="on" data-no-retina="" data-offsetend="0 0" data-offsetstart="0 0" data-rotateend="0" data-rotatestart="0" data-scaleend="100" data-scalestart="120">
 									<!-- LAYERS -->
 
 									<!-- LAYER NR. 1 -->
@@ -112,7 +112,7 @@
 										data-splitout="none"
 										data-responsive_offset="on"
 										style="z-index: 6; white-space: nowrap;">
-										<h1>Develop Compliance</h1>
+										<h1 class="text-center">Prado & Cantú Consultoría Legal <br> & Compliance S.C.</h1>
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -199,7 +199,7 @@
 										data-splitout="none"
 										data-responsive_offset="on"
 										style="z-index: 6; white-space: nowrap;">
-										<h1>Develop Compliance</h1>
+										<h1 class="text-center">Prado & Cantú Consultoría Legal <br> & Compliance S.C.</h1>
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -219,7 +219,7 @@
 										data-splitin="none"
 										data-splitout="none"
 										data-responsive_offset="on"
-										style="z-index: 6; white-space: nowrap;">
+										style="z-index: 6; white-space: nowrap;"><br><br><br>
 										<h6>Todo impulso es ciego, excepto si hay saber.</h6>
 									</div>
 
@@ -281,7 +281,7 @@
 										data-splitout="none"
 										data-responsive_offset="on"
 										style="z-index: 6; white-space: nowrap;">
-										<h1>Develop Compliance</h1>
+										<h1 class="text-center">Prado & Cantú Consultoría Legal <br> & Compliance S.C.</h1>
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -301,7 +301,7 @@
 										data-splitin="none"
 										data-splitout="none"
 										data-responsive_offset="on"
-										style="z-index: 6; white-space: nowrap;">
+										style="z-index: 6; white-space: nowrap;"><br><br><br>
 										<h6>Todo impulso es ciego, excepto si hay saber.</h6>
 									</div>
 
@@ -340,7 +340,7 @@
 								</li>
 
 								<!-- SLIDE4  -->
-								<li data-index="rs-18" data-transition="fade" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="images/home/logogrande.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="" data-description="">
+								<li data-index="rs-18" data-transition="fade" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="images/home/LogoP&C.png"  data-rotate="0"  data-saveperformance="off"  data-title="" data-description="">
 									<!-- MAIN IMAGE -->
 									<img src="images/home/supreme-court.jpg"  alt="image" class="rev-slidebg" data-bgparallax="4" data-bgposition="center center" data-duration="10000" data-ease="Linear.easeNone" data-kenburns="on" data-no-retina="" data-offsetend="0 0" data-offsetstart="0 0" data-rotateend="0" data-rotatestart="0" data-scaleend="100" data-scalestart="120">
 									<!-- LAYERS -->
@@ -363,7 +363,7 @@
 										data-splitout="none"
 										data-responsive_offset="on"
 										style="z-index: 6; white-space: nowrap;">
-										<h1>Develop Compliance</h1>
+										<h1 class="text-center">Prado & Cantú Consultoría Legal <br> & Compliance S.C.</h1>
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -383,7 +383,7 @@
 										data-splitin="none"
 										data-splitout="none"
 										data-responsive_offset="on"
-										style="z-index: 6; white-space: nowrap;">
+										style="z-index: 6; white-space: nowrap;"><br><br><br>
 										<h6>Todo impulso es ciego, excepto si hay saber.</h6>
 									</div>
 
@@ -430,7 +430,7 @@
 					<div id="our-client">
 						<div class="container">
 							<div class="theme-title">
-								<h2>DEVELOP COMPLIANCE</h2>
+								<h2>Prado & Cantú Consultoría Legal & Compliance S.C.</h2>
 								<br>
 								<br>
 								<h3>Cuenta con un equipo de abogados expertos en las materias de:</h3>
@@ -572,7 +572,7 @@
 								<div class="opacity">
 									<div class="border-shape"><div><div>
 										<ul>
-											<li>Develop Compliance ofrece a las empresas la oportunidad de tener un liderazgo en la construcción de un sociedad más íntegra y libre de corrupción. </li>
+											<li>Prado & Cantú Consultoría Legal & Compliance S.C. ofrece a las empresas la oportunidad de tener un liderazgo en la construcción de un sociedad más íntegra y libre de corrupción. </li>
 
 										</ul></div></div>
 									</div> <!-- /.border-shape -->
@@ -630,7 +630,7 @@
 								<div class="opacity">
 									<div class="border-shape"><div><div>
 										<ul>
-											<li>Develop Compliance prepara a una empresa para la visión que tendrán de ella las nuevas generaciones. </li>
+											<li>Prado & Cantú Consultoría Legal & Compliance S.C. prepara a una empresa para la visión que tendrán de ella las nuevas generaciones. </li>
 										</ul></div></div>
 									</div> <!-- /.border-shape -->
 								</div> <!-- /.opacity -->
@@ -663,7 +663,7 @@
 
 			<div class="page-middle-banner">
 				<div class="opacity">
-					<h3>En Develop Compliance te asesoramos, realizamos un estudio profundo para crear un método preciso para el funcionamiento legal correcto de la empresa.</h3>
+					<h3>En Prado & Cantú Consultoría Legal & Compliance S.C. te asesoramos, realizamos un estudio profundo para crear un método preciso para el funcionamiento legal correcto de la empresa.</h3>
 					<p>Estructuramos un comportamiento laboral realmente funcional con una actitud integra.</p>
 				</div> <!-- /.opacity -->
 			</div> <!-- /.page-middle-banner -->
@@ -800,7 +800,7 @@
 
 
 										El buen cumplimiento de las normas no puede darse por sentado dentro de la compañía, ya que es de gran importancia para el desarrollo y crecimiento de la empresa  se debe poner suma atención porque esté sea llevado a cabo.</ul>
-										<br><ul>El concepto de criminal compliance ha tenido un mayor uso y crecimiento E.U.A y Europa, en Develop Compliance asesoramos a los clientes para la presentación de un programa de cumplimiento y procedimiento empresarial de conformidad con las exigencias legales.</ul>
+										<br><ul>El concepto de criminal compliance ha tenido un mayor uso y crecimiento E.U.A y Europa, en Prado & Cantú Consultoría Legal & Compliance S.C. asesoramos a los clientes para la presentación de un programa de cumplimiento y procedimiento empresarial de conformidad con las exigencias legales.</ul>
 										<br>
 
 											<li>El marco organizacional de la empresa.</li>
