--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			-->
 			<header class="theme-main-header">
 				<div class="container">
-					<a href="index.html" style="width:65px; height:65px;" class="logo float-left tran4s"><img src="images/logo/LogoP&C.png" alt="Logo"></a>
+					<a href="index.html" style="width:65px; height:65px;" class="logo float-left tran4s"><img src="images/logo/ComplyLogoMini.png" alt="Logo"></a>
 
 					<!-- ========================= Theme Feature Page Menu ======================= -->
 					<nav class="navbar float-right theme-main-menu one-page-menu">
@@ -95,7 +95,7 @@
 									<!-- LAYERS -->
 
 									<!-- LAYER NR. 1 -->
-									<div class="tp-caption"
+									<div class="tp-caption container"
 										data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
 										data-y="['middle','middle','middle','middle']" data-voffset="['-58','-58','0','-50']"
 										data-width="none"
@@ -110,9 +110,8 @@
 										data-start="1000"
 										data-splitin="none"
 										data-splitout="none"
-										data-responsive_offset="on"
-										style="z-index: 6; white-space: nowrap;">
-										<h1 class="text-center">Prado & Cantú Consultoría Legal <br> & Compliance S.C.</h1>
+										data-responsive_offset="on">
+										
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -131,9 +130,8 @@
 										data-start="2000"
 										data-splitin="none"
 										data-splitout="none"
-										data-responsive_offset="on"
-										style="z-index: 6; white-space: nowrap;"><br><br><br>
-										<h6>Todo impulso es ciego, excepto si hay saber.</h6>
+										data-responsive_offset="on">
+										
 									</div>
 
 
@@ -197,9 +195,7 @@
 										data-start="1000"
 										data-splitin="none"
 										data-splitout="none"
-										data-responsive_offset="on"
-										style="z-index: 6; white-space: nowrap;">
-										<h1 class="text-center">Prado & Cantú Consultoría Legal <br> & Compliance S.C.</h1>
+										data-responsive_offset="on">
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -218,9 +214,7 @@
 										data-start="2000"
 										data-splitin="none"
 										data-splitout="none"
-										data-responsive_offset="on"
-										style="z-index: 6; white-space: nowrap;"><br><br><br>
-										<h6>Todo impulso es ciego, excepto si hay saber.</h6>
+										data-responsive_offset="on">
 									</div>
 
 
@@ -279,9 +273,7 @@
 										data-start="1000"
 										data-splitin="none"
 										data-splitout="none"
-										data-responsive_offset="on"
-										style="z-index: 6; white-space: nowrap;">
-										<h1 class="text-center">Prado & Cantú Consultoría Legal <br> & Compliance S.C.</h1>
+										data-responsive_offset="on">
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -300,9 +292,7 @@
 										data-start="2000"
 										data-splitin="none"
 										data-splitout="none"
-										data-responsive_offset="on"
-										style="z-index: 6; white-space: nowrap;"><br><br><br>
-										<h6>Todo impulso es ciego, excepto si hay saber.</h6>
+										data-responsive_offset="on">
 									</div>
 
 
@@ -361,9 +351,7 @@
 										data-start="1000"
 										data-splitin="none"
 										data-splitout="none"
-										data-responsive_offset="on"
-										style="z-index: 6; white-space: nowrap;">
-										<h1 class="text-center">Prado & Cantú Consultoría Legal <br> & Compliance S.C.</h1>
+										data-responsive_offset="on">
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -382,9 +370,7 @@
 										data-start="2000"
 										data-splitin="none"
 										data-splitout="none"
-										data-responsive_offset="on"
-										style="z-index: 6; white-space: nowrap;"><br><br><br>
-										<h6>Todo impulso es ciego, excepto si hay saber.</h6>
+										data-responsive_offset="on">
 									</div>
 
 
