--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 					<div id="our-client">
 						<div class="container">
 							<div class="theme-title">
-								<h2>Prado & Cantú Consultoría Legal & Compliance S.C.</h2>
+								<h2>Prado & Cantú Consultoría Legal & Compliance, S.C.</h2>
 								<br>
 								<br>
 								<h3>Cuenta con un equipo de abogados expertos en las materias de:</h3>
@@ -558,7 +558,7 @@
 								<div class="opacity">
 									<div class="border-shape"><div><div>
 										<ul>
-											<li>Prado & Cantú Consultoría Legal & Compliance S.C. ofrece a las empresas la oportunidad de tener un liderazgo en la construcción de un sociedad más íntegra y libre de corrupción. </li>
+											<li>Prado & Cantú Consultoría Legal & Compliance, S.C. ofrece a las empresas la oportunidad de tener un liderazgo en la construcción de un sociedad más íntegra y libre de corrupción. </li>
 
 										</ul></div></div>
 									</div> <!-- /.border-shape -->
@@ -616,7 +616,7 @@
 								<div class="opacity">
 									<div class="border-shape"><div><div>
 										<ul>
-											<li>Prado & Cantú Consultoría Legal & Compliance S.C. prepara a una empresa para la visión que tendrán de ella las nuevas generaciones. </li>
+											<li>Prado & Cantú Consultoría Legal & Compliance, S.C. prepara a una empresa para la visión que tendrán de ella las nuevas generaciones. </li>
 										</ul></div></div>
 									</div> <!-- /.border-shape -->
 								</div> <!-- /.opacity -->
@@ -786,7 +786,7 @@
 
 
 										El buen cumplimiento de las normas no puede darse por sentado dentro de la compañía, ya que es de gran importancia para el desarrollo y crecimiento de la empresa  se debe poner suma atención porque esté sea llevado a cabo.</ul>
-										<br><ul>El concepto de criminal compliance ha tenido un mayor uso y crecimiento E.U.A y Europa, en Prado & Cantú Consultoría Legal & Compliance S.C. asesoramos a los clientes para la presentación de un programa de cumplimiento y procedimiento empresarial de conformidad con las exigencias legales.</ul>
+										<br><ul>El concepto de criminal compliance ha tenido un mayor uso y crecimiento E.U.A y Europa, en Prado & Cantú Consultoría Legal & Compliance, S.C. asesoramos a los clientes para la presentación de un programa de cumplimiento y procedimiento empresarial de conformidad con las exigencias legales.</ul>
 										<br>
 
 											<li>El marco organizacional de la empresa.</li>
